fix findMembers